--- a/template.html
+++ b/template.html
@@ -5,10 +5,11 @@
       <img src="https://wwp.northeastern.edu/wwo/lab/wwvt/assets/logo.png" width="61" height="52" class="d-inline-block align-top" alt="">
       <a href="https://wwp.northeastern.edu/wwo/lab/wwvt/" id="wwvt-home">Women Writers Vector Toolkit</a>
     </div>
-    <div>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="dropdown-container">
+      <button id="sidebar-hidder" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -45,7 +46,7 @@
               </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://wwp.northeastern.edu/wwo/lab/wwvt/methodology/">Methodology</a>
+              <a class="nav-link" href="https://wwp.northeastern.edu/wwo/lab/wwvt/methodology/">Methodology</a>
           </li>
 
         </ul>
